--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -5,6 +5,8 @@
     <p class='col-12'>My Coupons</p>
   </div>
 
+  <p><%= link_to "Create New Coupon", new_merchant_coupon_path(@merchant) %></p>
+
 <section id="coupons">
         <% @coupons.each do |coupon| %>
           <section id="coupon-<%= coupon.id %>">
