--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -8,6 +8,6 @@
   <%= f.label :discount, "Discount Amount" %>
   <%= f.number_field :discount %><br/><br/>
   <%= f.label :discount_type, "Discount Type" %>
-  <%= f.text_field :discount_type %><br/><br/>
+  <%= f.select(:discount_type, ["dollar", "percent"])  %><br/><br/>
   <%= f.submit 'Submit'%>
 <% end %>
