Adds spec test for activate button, updates view with presentation logic. Tests pass.

--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -14,6 +14,10 @@
     </p>
     <p>Coupon Status: <%= @coupon.status %></p>
     <p>Times Used: <%= @coupon.coupon_use_count %></p>
-    <p> <%= button_to "Deactivate", merchant_coupon_status_path(@merchant, @coupon), method: :patch, params: {status: "inactive"} %> </p>
-
+    <p> <% if @coupon.status == "active"%>
+        <%= button_to "Deactivate", merchant_coupon_status_path(@merchant, @coupon), method: :patch, params: {status: "inactive"} %>
+        <% else %>
+        <%= button_to "Activate", merchant_coupon_status_path(@merchant, @coupon), method: :patch, params: {status: "active"} %> 
+        <% end %>
+        </p>
 </body>
