Updates invoice show page with sub and grand total. Adds grand total instance method. Tests are passing. Missing model testing.

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -11,7 +11,11 @@
   <br>
 
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
-  <p>Total Revenue: <%= @invoice.total_revenue %></p>
+  <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %></p>
+  <p>Sub Total: <%= number_to_currency(@invoice.total_revenue) %></p>
+  <p>Grand Total: <%= number_to_currency(@invoice.grand_total) %></p>
+  <p>Coupon Used: <%= link_to "#{@coupon.name}, #{@coupon.unique_code}", merchant_coupon_path(@merchant, @coupon)%> </p>
+
 
 
   <h4>Customer:</h4>
