Adds test for sub total and grand total for admin/invoice show page. Test passing.

--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -14,6 +14,13 @@
       <% end %>
   <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %>
   <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %>
+  <p>Sub Total: <%= number_to_currency(@invoice.total_revenue) %></p>
+  <p>Grand Total: <%= number_to_currency(@invoice.grand_total) %></p>
+  <p> 
+    <% if @coupon != nil %>
+  Coupon Used: <%= link_to "#{@coupon.name}, #{@coupon.unique_code}", merchant_coupon_path(@merchant, @coupon)%>
+    <% end %>
+  </p>
 
   <h4>Customer:</h4>
     <%= @invoice.customer.first_name %> <%= @invoice.customer.last_name %><br>
